# agentic-news-trm

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  code-quality.yml  daily_pipeline.yml  deploy.yml  model-validation.yml  security.yml
notebooks/: cnn_colombia_20251229_164110.json  market-exchanges.ipynb  news-colombia.ipynb
src/config/: constants.py  settings.py
src/gates/: base.py  content_quality.py  duplicate_detection.py  temporal_relevance.py  topic_relevance.py
src/models/: enums.py  prompts.py  schemas.py
src/monitoring/: logger.py
src/pipeline/: cost_tracker.py  daily_analysis.py  orchestrator.py
src/processors/: chain_executor.py  llm_client.py
src/scrapers/: base.py  market_scraper.py  news_scraper.py
src/storage/: local_parquet.py
src/utils/: date_utils.py  hash_utils.py  retry.py
