[project]
name = "agentic-news-trm"
version = "0.1.0"
description = "Agente de analisis de noticias colombianas y su impacto en el precio del dolar"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # CORE
    "openai",
    "python-dotenv",
    "ipykernel",
    
    # LANGCHAIN ECOSYSTEM
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-anthropic",
    "langchain-community>=0.4.1",
    "langchain-google-vertexai>=2.0.0",
    
    # LANGGRAPH ECOSYSTEM
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]",
    
    # WEB SCRAPING
    "aiohttp>=3.9.0",
    "beautifulsoup4==4.14.3",
    "lxml",
    "feedparser",
    
    # GOOGLE CLOUD
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.40.0",
    
    # WEB SERVER
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    
    # DASHBOARD
    "streamlit==1.52.2",
    "plotly>=5.18.0",
    
    # MARKET DATA
    "yfinance>=0.2.40",
    
    # UTILIDADES
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]